[tool.poetry]
name = "poetry_docker"
version = "0.1.0"
description = ""
authors = ["10sr <8.slashes@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
