[metadata]
name = typecheck-try
version = 0.0.1
description = Try typecheck packages
long_description = file: README.md
long_description_content_type = text/markdown
author = 10sr
author_email = 8.slashes@gmail.com
url = https://github.com/10sr/typecheck-try
 # keywords =
license = Apache-2.0
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
  semver

[options.packages.find]
exclude =
  tests

[options.entry_points]
console_scripts =
  typecheck_try = typecheck_try.__main__:main


[options.extras_require]
dev =
  mypy
  pyre-check
  pytype


[mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = 3.9
platform = linux

# show error messages from unrelated files
follow_imports = normal

# suppress errors about unsatisfied imports
ignore_missing_imports = True
